# duckdb-httpfs-timeout-retry

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extension_config.cmake
docs/: NEXT_README.md
src/: file_system_timeout_retry_wrapper.cpp  httpfs_timeout_retry_extension.cpp  record_file_system.cpp  scoped_directory.cpp  timeout_retry_file_opener.cpp
src/include/: file_system_timeout_retry_wrapper.hpp  httpfs_timeout_retry_extension.hpp  httpfs_timeout_retry_settings.hpp  record_file_system.hpp  timeout_retry_file_opener.hpp
test/: README.md
test/sql/: attach_db.test  extension_setting.test  httpfs_timeout_retry.test
test/unittest/: CMakeLists.txt  test_extension_settings.cpp  test_extension_settings_filesystem.cpp  test_extension_settings_opener.cpp
